--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta name=“apple-mobile-web-app-capable” content=“yes”>
     <meta name=“apple-mobile-web-app-status-bar-style” content="#f5f5f5">
-    <link rel=“apple-touch-icon” sizes=“72x72" href=“./icon/apple-touch-icon-72x72.png”>
+    <link rel=“apple-touch-icon” sizes="72x72" href=“./icon/apple-touch-icon-72x72.png”>
     <link rel=“apple-touch-icon” sizes=“114x114” href=“./icon/apple-touch-icon-114x114.png”>
     <link rel=“apple-touch-icon” href=“./icon/apple-touch-icon-57x57.png”>
     <link rel=“apple-touch-startup-image” href=“./icon/118@3x.png”>
